namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-hello
  labels:
    name: local
    lang: go
