deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello
  namespace: go-hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-hello
  template:
    metadata:
      labels:
        app: go-hello
    spec:
      containers:
        - name: go-hello
          image: brunty/go-hello:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
              - containerPort: 8180
