service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-hello
spec:
  selector:
    app: go-hello
  type: NodePort
  ports:
    - port: 8180
      targetPort: 8180
      protocol: TCP
